Every things install basic thinks

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,37 @@
 <p>home-page works!</p>
+
+<div>
+    <h1>
+        Primeng Button
+    </h1>
+</div>
+<p-button label="Submit"></p-button>
+
+<div>
+    <h1>
+        Primeflex gride System
+    </h1>
+    <div class="grid">
+        <div class="col">
+            <div class="text-center p-3 border-round-sm bg-primary font-bold">1</div>
+        </div>
+        <div class="col">
+            <div class="text-center p-3 border-round-sm bg-primary font-bold ">2</div>
+        </div>
+        <div class="col">
+            <div class="text-center p-3 border-round-sm bg-primary font-bold ">3</div>
+        </div>
+    </div>
+
+</div>
+
+<div>
+    <h1>
+        Angular Material
+    </h1>
+    <div class="example-button-container">
+        <button mat-fab color="warn" aria-label="Example icon button with a home icon">
+            <!-- <mat-icon>home</mat-icon> --> dasdhashdu
+        </button>
+    </div>
+</div>
