--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -11,7 +11,7 @@
     <h1>
         Primeflex gride System
     </h1>
-    <div class="grid">
+    <!-- <div class="grid">
         <div class="col">
             <div class="text-center p-3 border-round-sm bg-primary font-bold">1</div>
         </div>
@@ -21,7 +21,7 @@
         <div class="col">
             <div class="text-center p-3 border-round-sm bg-primary font-bold ">3</div>
         </div>
-    </div>
+    </div> -->
 
 </div>
 
