--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,37 +1,63 @@
-<p>home-page works!</p>
-
-<div>
-    <h1>
-        Primeng Button
-    </h1>
-</div>
-<p-button label="Submit"></p-button>
-
-<div>
-    <h1>
-        Primeflex gride System
-    </h1>
-    <!-- <div class="grid">
-        <div class="col">
-            <div class="text-center p-3 border-round-sm bg-primary font-bold">1</div>
+<div class="col-11 m-auto">
+  <div class="col-12 flex gap-2">
+    <div class="left-dashboard col-3">
+      <!-- First-container -->
+      <div class="shadow-2 border-round-lg p-3 bg-white">
+        <div class="flex justify-content-between">
+          <div>
+            Orders
+          </div>
+          <div>
+            <i class="pi pi-shopping-cart"></i>
+          </div>
         </div>
-        <div class="col">
-            <div class="text-center p-3 border-round-sm bg-primary font-bold ">2</div>
+        <div class="my-3">
+          <span class="text-xl font-medium">26</span>
         </div>
-        <div class="col">
-            <div class="text-center p-3 border-round-sm bg-primary font-bold ">3</div>
+        <div class="mb-3">
+          <span class="text-lg font-medium text-red-500">23 </span> <span>Today Orders</span>
         </div>
-    </div> -->
+      </div>
+      <!-- Second-container -->
+      <div class="shadow-2 border-round-lg p-3 bg-white mt-3">
+        <div class="flex justify-content-between">
+          <div>
+            Orders
+          </div>
+          <div>
+            <i class="pi pi-shopping-cart"></i>
+          </div>
+        </div>
+        <div class="my-3">
+          <span class="text-xl font-medium">26</span>
+        </div>
+        <div class="mb-3">
+          <span class="text-lg font-medium text-red-500">23 </span> <span>Today Orders</span>
+        </div>
+      </div>
 
-</div>
+      <!-- Third-container -->
+      <div class="shadow-2 border-round-lg p-3 bg-white mt-3">
+        <div class="flex justify-content-between">
+          <div>
+            Orders
+          </div>
+          <div>
+            <i class="pi pi-shopping-cart"></i>
+          </div>
+        </div>
+        <div class="my-3">
+          <span class="text-xl font-medium">26</span>
+        </div>
+        <div class="mb-3">
+          <span class="text-lg font-medium text-red-500">23 </span> <span>Today Orders</span>
+        </div>
+      </div>
 
-<div>
-    <h1>
-        Angular Material
-    </h1>
-    <div class="example-button-container">
-        <button mat-fab color="warn" aria-label="Example icon button with a home icon">
-            <!-- <mat-icon>home</mat-icon> --> dasdhashdu
-        </button>
     </div>
+    <div class="right-dashboard col-9 shadow-2 bg-white border-round-lg">
+      <app-total-orders></app-total-orders>
+    </div>
+  </div>
+
 </div>
