--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,6 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
+.mat-typography {
+    background-color: rgb(110, 34, 38);
+}
