customer added successfully

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,5 +1,5 @@
-<div class="col-11 m-auto">
-  <div class="col-12 flex flex-wrap  gap-2">
+<div class="col-12 m-auto">
+  <div class="col-12 flex flex-wrap  gap-2 justify-content-center ">
     <div class="left-dashboard lg:col-3 md:col-3 col-12">
       <!-- First-container -->
       <div class="shadow-2 border-round-lg p-3 bg-red-600">
@@ -62,7 +62,7 @@
 
     </div>
 
-    <div class="lg:col-9 md:col-9 col-12">
+    <div class="lg:col-8 md:col-8 col-12">
       <div class="col-12 flex gap-2 p-0">
         <div class="shadow-2 col-6 border-round-lg p-0 p-3 text-center bg-green-700">
           <div>
@@ -96,7 +96,7 @@
         </div>
       </div>
       <div class="right-dashboard col-12 p-0 shadow-2 bg-white border-round-lg mt-4">
-        <app-total-orders></app-total-orders>
+        <app-add-customer></app-add-customer>
       </div>
     </div>
   </div>
