Stock Page Done

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -12,7 +12,7 @@
           </div>
         </div>
         <div class="my-3">
-          <span class="text-xl font-medium text-white">26</span>
+          <span class="text-xl font-medium text-white">{{this.data.length}}</span>
         </div>
       </div>
       <!-- Second-container -->
