--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -2,19 +2,19 @@
     <mat-toolbar>
         <div class="col-12 p-0 flex">
             <div class="col-6 p-0 m-auto">
-                <span routerLink="/"> <i class="pi pi-home text-red-500 text-xl mr-2"></i>Inventory System</span>
+                <span routerLink="/" class="cursor-pointer"> <i class="pi pi-home text-red-500 text-xl mr-2"></i>IM System</span>
             </div>
             <div class="col-6 p-0 flex">
-                <div class="flex col-12">
-                    <div class="col-4">
+                <div class="flex col-12 justify-content-end">
+                    <!-- <div class="col-4">
                         <i class="pi pi-cart-plus text-2lg m-auto text-red-500"></i> <span class="px-2 text-sm cursor-pointer" routerLink="order_processing">Order processing</span>
-                    </div>
-                    <div class="col-4">
+                    </div> -->
+                    <!-- <div class="col-4">
                         <i class="pi pi-list-check text-2lg m-auto text-red-500"></i><span class="px-2 text-sm cursor-pointer" routerLink="add_inventory">
                             Add inventory
                         </span>
-                    </div>
-                    <div class="col-4">
+                    </div> -->
+                    <div class="col-4 ">
                         <i class=" pi pi-file-check text-2lg m-auto text-red-500"></i><span class="px-2 text-sm cursor-pointer" routerLink="stock">
                             Stock
                         </span>
