--- a/src/app/pages/stock/stock.component.scss
+++ b/src/app/pages/stock/stock.component.scss
@@ -31,3 +31,20 @@
         padding: 0 1rem 1rem 1rem;
     }
 }
+
+.clear-btn {
+    width: 100px;
+    height: 34px;
+    border-radius: 5px;
+    background: white;
+    color: black;
+    border: 1px solid black;
+}
+
+.apply-btn {
+    width: 100px;
+    height: 34px;
+    border-radius: 5px;
+    background: #f97316;
+    color: white;
+}
